DMP-3651: Ensure courthouse display name is used in data returned from APIs (#1822)